# project-alchemy

./: .gitignore  .in  .out  .pre-commit-config.yaml  .travis.yml  AlchemyApp Heroku.postman_environment.json  AlchemyApp.postman_collection.json  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.mypy_cache/3.7/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _compression.data.json  _compression.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _markupbase.data.json  _markupbase.meta.json  _random.data.json  _random.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  certifi.data.json  certifi.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.data.json  contextvars.meta.json  copy.data.json  copy.meta.json  datetime.data.json  datetime.meta.json  decimal.data.json  (+61 more)
examples/: cisco.txt  juniper.txt  print_config.py
main/: admin.py  api.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_device.py  0003_device_loopback_address.py  0004_auto_20200217_0008.py  0005_auto_20200217_0041.py  0006_devicelink.py  0007_deviceuser.py  0008_auto_20200217_0354.py  (+2 more)
project_alchemy/: settings.py  urls.py  wsgi.py
templates/: Configurations-test.docx  cisco.j2  junos.j2
(+567 files in other folders)
