[tool.poetry]
name = "project_alchemy"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=3.0"
django-extensions = "*"
django-dotenv = "*"
pytest = "*"
sentry_sdk = "^0.14.1"
uuid = "^1.30"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.17.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
django-stubs = "^1.1.0"
mypy = "^0.740"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
